# gepaxmapelite

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: design.md
examples/: deterministic_demo.py  seed_meta_prompts.json
src/gepaxmapelite/: __init__.py  archive.py  engine.py  evaluation.py  gepa_runner.py  hashing.py  models.py  promptbreeder.py  text_adapter.py
tests/: test_archive.py  test_evaluation.py  test_nested_engine.py  test_promptbreeder.py
