[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "gepaxmapelite"
version = "0.1.0"
description = "Promptbreeder-driven GEPA meta-prompt evolution with a MAP-Elites archive"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Bricen Peinado" }]
dependencies = [
  "gepa==0.1.4",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "pytest>=7.4,<8",
  "pytest-cov>=5.0",
  "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gepaxmapelite"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["gepaxmapelite"]
